--- a/style/style.scss
+++ b/style/style.scss
@@ -1,2 +1,108 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+/** VARIABLES **/
+
+$desaturated-red: hsl(0, 36%, 70%);
+$soft-red: hsl(0, 93%, 68%);
+$grayish-red: hsl(0, 6%, 24%);
+
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
+
+/*****************/
+body {
+  font-size: 16px;
+  font-family: "Josefin Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.general-container {
+    height: 100vh;
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: row;
+    align-items: center;
+}
+.logo {
+    padding-top: 4em;
+    padding-left: 10em;
+    position: absolute;
+
+}
+.left {
+    width: 60%;
+    margin-left: 10%;
+
+    h1 {
+        font-size: 5em;
+        text-transform: uppercase;
+        width: 40%;
+        font-weight: 300;
+        letter-spacing: 20px;
+        color: $desaturated-red;
+        margin-bottom: 1%;
+
+        span {
+            font-weight: 600;
+            color: black;
+        }
+    }
+    p {
+        margin-right: 30%;
+        letter-spacing: 2px;
+        font-weight: 400;
+        width: 30vw;
+        line-height: 25px;
+        color: $desaturated-red;
+
+    }
+    .form {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: row;
+        width: 60%;
+
+    }
+    .form-input {
+        width: 25vw;
+        height: 3em;
+        border: 1px solid $desaturated-red;
+        border-radius: 40px;
+    }
+    .button {
+        background-color: $desaturated-red;
+        width: 100px;
+        height: 50px;
+        border: $desaturated-red;
+        border-radius: 40px;
+        margin-left: -40px;
+
+    }
+}
+.right {
+    width: 40%;
+    background-color: silver;
+    background-image: url('/images/3.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  background-color: slateblue;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
