--- a/style/style.scss
+++ b/style/style.scss
@@ -1,108 +1,119 @@
 /** VARIABLES **/
 
 $desaturated-red: hsl(0, 36%, 70%);
-$soft-red: hsl(0, 93%, 68%);
+$soft-red: #f96262;
 $grayish-red: hsl(0, 6%, 24%);
 
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
 
 /*****************/
-body {
-  font-size: 16px;
-  font-family: "Josefin Sans", sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-.general-container {
-    height: 100vh;
-    display: flex;
+/* MOBILE */
+@media (max-width: 900px) {
+  * {
+    margin: 0;
+    padding: 0;
+    font-family: "Josefin Sans";
     box-sizing: border-box;
-    flex-direction: row;
-    align-items: center;
-}
-.logo {
-    padding-top: 4em;
-    padding-left: 10em;
-    position: absolute;
+  }
 
-}
-.left {
-    width: 60%;
-    margin-left: 10%;
+  .general-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
 
-    h1 {
-        font-size: 5em;
-        text-transform: uppercase;
-        width: 40%;
-        font-weight: 300;
-        letter-spacing: 20px;
-        color: $desaturated-red;
-        margin-bottom: 1%;
+  .logo {
+    margin: 8% 5%;
 
-        span {
-            font-weight: 600;
-            color: black;
-        }
+    img {
+      width: 35%;
     }
-    p {
-        margin-right: 30%;
-        letter-spacing: 2px;
-        font-weight: 400;
-        width: 30vw;
-        line-height: 25px;
-        color: $desaturated-red;
+  }
 
-    }
-    .form {
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        flex-direction: row;
-        width: 60%;
-
-    }
-    .form-input {
-        width: 25vw;
-        height: 3em;
-        border: 1px solid $desaturated-red;
-        border-radius: 40px;
-    }
-    .button {
-        background-color: $desaturated-red;
-        width: 100px;
-        height: 50px;
-        border: $desaturated-red;
-        border-radius: 40px;
-        margin-left: -40px;
-
-    }
-}
-.right {
-    width: 40%;
+  .right {
     background-color: silver;
-    background-image: url('/images/3.jpg');
+    background-image: url("/images/hero-mobile.jpg");
     background-position: center;
     background-repeat: no-repeat;
+    height: 35vh;
     background-size: cover;
-    height: 100%;
+  }
+
+  .left {
+    margin: 7%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  h1 {
+    color: $desaturated-red;
+    text-transform: uppercase;
+    width: 60%;
+    font-weight: 300;
+    letter-spacing: 7px;
+    font-size: 2.5em;
+
+    span {
+      color: $grayish-red;
+      font-weight: 600;
+    }
+  }
+
+  p {
+    margin-top: 1em;
+    margin-bottom: 2em;
+    font-weight: 400;
+    color: $desaturated-red;
+  }
+
+  .form {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    input {
+      height: 12vw;
+      width: 80vw;
+      border: 1px solid $desaturated-red;
+      border-radius: 40px;
+    }
+    .form-input {
+        padding-left: 20px;
+        color: $desaturated-red
+        ;
+    }
+
+    .button {
+      background: rgb(248, 191, 191);
+      background: linear-gradient(
+        135deg,
+        rgba(248, 191, 191, 1) 0%,
+        rgba(238, 140, 140, 1) 100%
+      );
+      width: 15vw;
+      height: 12vw;
+      border: $desaturated-red;
+      border-radius: 40px;
+      margin-left: -40px;
+      -webkit-box-shadow: 143px 134px 123px -124px rgba(249,98,98,1);
+      -moz-box-shadow: 143px 134px 123px -124px rgba(249,98,98,1);
+      box-shadow: 143px 134px 123px -124px rgba(249,98,98,1);
+
+      img {
+        margin-top: 3px;
+        margin-left: 2px;
+      }
+    }
+  }
 }
 
-
-
-
-
-
-
-
-
-
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  background-color: slateblue;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
+/* DESKTOP*/
+@media (min-width: 900px) {
+  body {
+    background-color: $soft-red;
+  }
 }
