--- a/style/style.scss
+++ b/style/style.scss
@@ -149,6 +149,7 @@ $grayish-red: hsl(0, 6%, 24%);
     width: 50vw;
     display: flex;
     margin-left: 8.5vw;
+    margin-top: 4em;
     flex-direction: column;
     justify-content: center;
   }
